Refactoring codes to ensure clean and standard codes